Actions
Bug #11438
closedvgrind: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
vfontedpr.c: In function 'main': vfontedpr.c:270:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *cp++ = NULL; ^ vfontedpr.c:358:23: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] pstack[psptr][0] = NULL; ^ vfontedpr.c: In function 'putScp': vfontedpr.c:448:30: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] pstack[psptr][PNAMELEN] = NULL; ^ vfontedpr.c: In function 'isproc': vfontedpr.c:807:14: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] pname[0] = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit e8bca4ea3a0f5e2a084777440ee86870f8c9d88f
commit e8bca4ea3a0f5e2a084777440ee86870f8c9d88f Author: Toomas Soome <tsoome@me.com> Date: 2019-07-30T20:03:52.000Z 11438 vgrind: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions